--- a/frontend/src/app/components/pages/edit-account-page/edit-account-page.component.css
+++ b/frontend/src/app/components/pages/edit-account-page/edit-account-page.component.css
@@ -1,20 +1,37 @@
+
+
+.wrapper {
+    height: 100%;
+    margin: 2rem 0;
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+}
+
 app-title {
-    padding: 1rem;
+    padding: 0.5rem;
     text-align: center;
 }
 
 .form {
-    margin: 0px auto;
+    margin: 0 auto;
+    padding: 2rem;
+    width: 300px;
+    background-color: #f3f3f3;
+    border-radius: 5px;
+    box-shadow: 0 0 8px rgb(185, 185, 185);
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 .image-container {
-    height: 210px;
     width: auto;
+    height: 180px;
     display: flex;
     flex-direction: column;
+    position: relative;
+
 }
 
 img {
@@ -50,11 +67,11 @@ input {
  justify-content: center;
  align-self: flex-end;
  transition: background-color 0.3s ease-in-out, border 0.3s ease-in-out;
+ z-index: 2;
 }
 
 .edit-icon mat-icon:hover {
     color: rgb(63, 151, 184);
-
 }
 
 .edit-icon:hover {
@@ -70,14 +87,17 @@ input {
 .file-input-container {
     width: 100px;
     padding: 10px;
+    background-color: white;
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
     transition: box-shadow 0.3s ease; 
     display: flex;
     align-items: center;
     justify-content: center;
-    align-self: center;
-
+    position: absolute;
+    bottom: 0px;
+    right: 20px;
+    z-index: 1;
 }
 
 .file-input-label {
@@ -90,12 +110,16 @@ input {
     position: absolute;
     left: 0;
     top: 0;
-    opacity: 0;
+    visibility: hidden;
     cursor: pointer;
   }
   
   .file-input-label mat-icon {
     margin-right: 8px; 
+  }
+
+  .delete-account-container {
+    padding: 1rem;
   }
 
   
