--- a/frontend/src/app/components/pages/home/home.component.css
+++ b/frontend/src/app/components/pages/home/home.component.css
@@ -43,9 +43,13 @@ ul{
     transition: 0.3s ease-in-out;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
   }
+
+  .card a {
+    align-self: center;
+  }
   
 
- .card img{
+  img{
     object-fit: cover;
     height: 14.5rem;
   }
