--- a/frontend/src/app/components/pages/dashboard/dashboard.component.html
+++ b/frontend/src/app/components/pages/dashboard/dashboard.component.html
@@ -5,9 +5,12 @@
       <input
         matInput
         (keyup)="applyFilter($event)"
-        placeholder="Ex. Mia"
+        placeholder="Filter Products"
         #input
       />
+      <button class="add-button" button mat-raised-button color="warn" (click)="openDialog()">
+        Add product
+      </button>
     </mat-form-field>
 
     <div class="mat-elevation-z8">
@@ -52,10 +55,10 @@
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
           <td mat-cell *matCellDef="let row">
             <button mat-icon-button color="primary" (click)="editProduct(row)">
-                <mat-icon>edit</mat-icon>
+              <mat-icon>edit</mat-icon>
             </button>
-            <button mat-icon-button color="warn">
-                <mat-icon>delete</mat-icon>
+            <button mat-icon-button color="warn" (click)="deleteProduct(row.id)" >
+              <mat-icon>delete</mat-icon>
             </button>
           </td>
         </ng-container>
