--- a/frontend/src/app/components/pages/edit-account-page/edit-account-page.component.html
+++ b/frontend/src/app/components/pages/edit-account-page/edit-account-page.component.html
@@ -64,7 +64,7 @@
       <app-button
         [widthRem]="15"
         [text]="'Cancel'"
-        bgColor="tomato"
+        bgColor="#F50057"
         (click)="cancelChanges()"
       />
     </div>
