--- a/frontend/src/app/components/pages/account-page/account-page.component.css
+++ b/frontend/src/app/components/pages/account-page/account-page.component.css
@@ -1,9 +1,10 @@
 .wrapper {
-    height: 87vh;
-    padding: 0 0 2rem 0;
+    padding: 1rem 0;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 5rem;
 }
 
 app-title {
@@ -54,6 +55,10 @@ img {
     object-fit: cover;
 }
 
+hr {
+   width: 800px;
+}
+
 .container {
     display: flex;
     flex-direction: column;
@@ -69,7 +74,7 @@ input {
 
 label {
     padding: 0.3rem 0;
-    color: rgb(63, 151, 184);
+    color: rgb(63, 81, 181);
 }
 
 
