--- a/frontend/src/app/components/pages/home/home.component.css
+++ b/frontend/src/app/components/pages/home/home.component.css
@@ -34,7 +34,7 @@ ul{
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    color:  #3f97b8;
+    color:  #3f51b5;
     background-color: white;
   }
 
@@ -133,7 +133,7 @@ ul{
     width: 4rem;
     padding:  10px;
     border-radius: 5px;
-    background-color:  rgb(63, 151, 184);
+    background-color:  #3f51b5;
     color: white;
     border: none;
     cursor: pointer;
