--- a/frontend/src/app/components/partials/input-container/input-container.component.css
+++ b/frontend/src/app/components/partials/input-container/input-container.component.css
@@ -1,26 +1,39 @@
-.container{
-    position:relative;
+.wrapper{
+    width: 100%;
+    padding: 0.1rem 0.5rem;
     margin-bottom: 0.5rem;
     border-radius: 0.7rem;
-    padding-top: 0.3rem;
     border: 1px solid #e0e0e0;
     color: #ffffff00;
+    display: flex;
+    align-items: center;
+  }
+
+  .container {
+    width: 100%;
+     position:relative;
+     display: flex;
+     align-items: center;
+    justify-content: space-between;
   }
   
   label{
     display: inline-block;
-    margin-left: 0.5rem;
     font-size: 0.9rem;
     color: #434343;
-    color: rgb(63, 151, 184);
+    color: #3f51b5;
     font-size: 1rem;
+    align-self: flex-start;
   }
 
   .content{
+    width: 90%;
     padding: 0 0.5rem;
     height: 2.7rem;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
   }
-  
+
+
+
+
+
