--- a/frontend/src/app/components/partials/loading/loading.component.css
+++ b/frontend/src/app/components/partials/loading/loading.component.css
@@ -18,13 +18,13 @@
   }
   
   img{
-    border-bottom: 10px solid rgb(63, 151, 184);
+    border-bottom: 10px solid #3f51b5;
     width: 200px;
     height: 200px;
   }
   
   h1{
-  color: rgb(63, 151, 184);
+  color: #3f51b5;
   text-transform: lowercase;
   }
   
