--- a/frontend/src/app/components/partials/not-found/not-found.component.css
+++ b/frontend/src/app/components/partials/not-found/not-found.component.css
@@ -10,7 +10,7 @@ div{
   
   a{
     font-size: 1.1rem;
-    background-color: rgb(63, 151, 184);
+    background-color: #3f51b5;
     color: white;
     border-radius: 10rem;
     padding: 0.7rem 1rem;
