--- a/frontend/src/app/components/partials/search/search.component.css
+++ b/frontend/src/app/components/partials/search/search.component.css
@@ -30,7 +30,7 @@
     font-size: 1rem;
     border-radius: 0 5px 5px 0;
     border: none;
-    background-color: rgb(63, 151, 184);
+    background-color: #3f51b5;
     color: white;
     opacity: 0.8;
     outline: none;
