--- a/frontend/src/app/components/pages/account-page/account-page.component.html
+++ b/frontend/src/app/components/pages/account-page/account-page.component.html
@@ -41,13 +41,58 @@
   <div class="hr">
      <hr/> 
   </div>
+ 
 
   
-  <div class="favourites" *ngFor="let favourite of favouriteProducts" >
-    {{favourite.product.imageUrl }}
-  <!-- ++++++++++++++++++++++++++++-->
-    <p>{{favourite.product.name}}</p>
-    <img  [src]="favourite.product.imageUrl" />
-    <p>{{favourite.product.price}}</p>
+
+   
+    <div class="favourites card" *ngFor="let favourite of favouriteProducts">
+      <a routerLink="/product/{{ favourite.product.id }}">
+        <img [src]="favourite.product.imageUrl" alt="{{ favourite.product.name }}" />
+      </a>
+      <div class="content">
+        <a routerLink="/product/{{ favourite.product.id }}" class="name">
+          <span>
+            {{ favourite.product.name }}
+          </span>
+        </a>
+  
+        <span
+          class="  material-icons favorite {{
+            user.id && favoriteProductsSet.has(favourite.product.id)
+              ? 'favorite'
+              : 'not'
+          }}"
+          (click)="toggleFavourite(favourite.product)"
+        >
+          favorite
+        </span>
+        <div class="stars">
+          <app-star-rating
+            [averageRating]="favourite.product.averageRating"
+            [productId]="favourite.product.id"
+          ></app-star-rating>
+        </div>
+        <div class="product-item-footer">
+          <div class="origins">
+            <span *ngFor="let origin of favourite.product.origins">
+              {{ origin }}
+            </span>
+          </div>
+        </div>
+      </div>
+
+
+  
+      <div class="price">
+        <span>
+          {{ favourite.product.price | currency : "EUR" }}
+        </span>
+        <button class="add-btn" (click)="addToCart(favourite.product)">Buy</button>
+      </div>
+    </div>
+    
   </div>
-</div>
+
+
+
