--- a/frontend/src/app/components/pages/account-page/account-page.component.css
+++ b/frontend/src/app/components/pages/account-page/account-page.component.css
@@ -3,8 +3,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    gap: 0.5rem;
+    justify-content: flex-start;
+    gap: 2rem;
     overflow: hidden;
 }
 
@@ -74,25 +74,21 @@ label {
     color: rgb(63, 81, 181);
 }
 
-.favourites {
-    width: 250px;
-    height: 350px;
-    background-color: #f3f3f3;
-    border-radius: 5px;
-    box-shadow: 0 0 8px rgb(185, 185, 185);
+
+.scroller-container {
+  width: 80%;
+  height: 500px;
 }
 
 .scroller {
-  width: 100vw;
-  height: 300px;
+  width: 100%;
+  padding: 0.2rem;
   display: grid;
-  gap: 1rem;
+  gap: 0.6rem;
   grid-auto-flow: column;
-  grid-auto-columns: 16rem;
+  grid-auto-columns: 15rem;
   align-items: center;
-  background-color: #f3f3f3;
-  border-top: 1px solid #e5e5e5;
-  border-bottom: 1px solid #e5e5e5;
+  justify-content: flex-start;
   overflow: auto;
   overscroll-behavior-inline: contain;
 }
@@ -103,18 +99,17 @@ label {
 
 .snaps-inline > * {
   scroll-snap-align: start;
-  scroll-padding-inline: 1rem;
+  scroll-padding-inline: 0rem;
 }
 
 ::-webkit-scrollbar {
   height: 1rem;
-  margin-block: 0.5rem;
+  margin-block: 1rem;
 }
 
 ::-webkit-scrollbar-track {
   background: rgba(114, 130, 220);
   border-radius: 100vw;
-
 }
 
 ::-webkit-scrollbar-thumb {
@@ -134,143 +129,11 @@ label {
   }
 }
 
-.card {
-  height: 16rem;
-  width: 15rem;
-  border: 1px solid whitesmoke;
-  border-radius: 1rem;
-  margin: 0.5rem;
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
-  color:  #3f51b5;
-  background-color: white;
-}
-
-.card:hover {
-  transform: scale(1.05);
-  transition: 0.3s ease-in-out;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
-}
-
-.card a {
-  align-self: center;
-}
-
-.product-image {
-  inline-size: 100%;
-  aspect-ratio: 16 / 9;
-  object-fit: cover;
- 
-}
-
-.card img:hover{
-  opacity: 0.9;
-  cursor: pointer;
-}
-
-.content{
-  margin-top: 0.3rem;
-  margin-bottom: .5rem;
-  padding: 0.5rem 1rem;
-  position: relative;
-  height: 2.7rem;
-  width: 100%;
-}
-
-.content .name:hover {
-  opacity: 0.8;
-  cursor: pointer;
-}
-
-.favorite{
-  position: absolute;
-  top: 0.5rem;
-  right: 1rem;
-  font-size: 1.2rem;
-}
-
-.favorite:hover {
-  cursor: pointer;
-  opacity: 0.8;
-}
-
-.favorite.not{
-  color: grey;
-}
-
-.stars{
-  margin-bottom: 0.2rem;
-}
-
-.product-item-footer{
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-}
-
-.origins{
-  flex: 9;
-}
-
-.origins span{
-  border-radius: 2rem;
-  background-color: whitesmoke;
-  display: inline-block;
-  font-size: 0.8rem;
-  color: grey;
-  margin-right: 0.3rem;
-  padding: 0 0.5rem;
-  margin-top: 0.2rem;
-}
-
-.price{
-  height: 50px;
-  padding: 0 1rem;
-  background: white;
-  color: #414141;
-  margin-top: 0.7rem;
-  font-size: 1.1rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-}
-
-.add-btn {
-  width: 4rem;
-  padding:  10px;
-  border-radius: 5px;
-  background-color:  #3f51b5;
-  color: white;
-  border: none;
-  cursor: pointer;
-}
-
-.add-btn:hover {
-  opacity: 0.8;
-}
 
 
-@media screen and (max-width: 1400px) {
 
-  .aside {
-    width: 1100px;
-    box-shadow: none;
-    flex-direction: row;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 3rem;
-  }
-}
 
-@media screen and (max-width: 700px) {
 
-  .aside {
-    flex-direction: column;
-    align-items: center;
-    gap: 0;
-  }
-}
+
  
   
