--- a/frontend/src/app/components/pages/home/home.component.css
+++ b/frontend/src/app/components/pages/home/home.component.css
@@ -13,139 +13,41 @@
   align-items: flex-start;
   }
 
-ul{
-    height: 80vh;
-    width: 1100px;
+.products-container {
+    height: 600px;
+    width: 80%;
     margin: 0 auto;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     list-style-type: none;
-    padding: 0;
-  }
-  
-  .card{
-    height: 22.5rem;
-    width: 20rem;
-    border: 1px solid whitesmoke;
-    border-radius: 1rem;
-    margin: 0.5rem;
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-    color:  #3f51b5;
-    background-color: white;
+    padding: 0 5rem;
+    overflow-y: scroll;
   }
 
-  .card:hover {
-    transform: scale(1.05);
-    transition: 0.3s ease-in-out;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
-  }
-
-  .card a {
-    align-self: center;
+  ::-webkit-scrollbar {
+    height: 1rem;
+    margin-block: 1rem;
   }
   
-
-  img{
-    object-fit: cover;
-    height: 14.5rem;
-  }
-
-  .card img:hover{
-    opacity: 0.9;
-    cursor: pointer;
+  ::-webkit-scrollbar-track {
+    background: rgba(114, 130, 220);
+    border-radius: 100vw;
   }
   
-  .content{
-    margin-top: 0.3rem;
-    margin-bottom: .5rem;
-    padding: 0.5rem 1rem;
-    position: relative;
-    height: 2.7rem;
-    width: 100%;
-  }
-
-  .content .name:hover {
-    opacity: 0.8;
-    cursor: pointer;
+  ::-webkit-scrollbar-thumb {
+    background: rgba(63, 81, 181);
+    border-radius: 100vw;
+    border: 0.25rem solid rgba(114, 130, 220) ;
   }
   
-  .favorite{
-    position: absolute;
-    top: 0.5rem;
-    right: 1rem;
-    font-size: 1.2rem;
-  }
-
-  .favorite:hover {
-    cursor: pointer;
-    opacity: 0.8;
+  ::-webkit-scrollbar-thumb {
+    background: rgba(63, 81, 181)
   }
   
-  .favorite.not{
-    color: grey;
-  }
-  
-  .stars{
-    margin-bottom: 0.2rem;
-  }
-  
-  .product-item-footer{
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-  }
-  
-  .origins{
-    flex: 9;
-  }
-  
-  .origins span{
-    border-radius: 2rem;
-    background-color: whitesmoke;
-    display: inline-block;
-    font-size: 0.8rem;
-    color: grey;
-    margin-right: 0.3rem;
-    padding: 0 0.5rem;
-    margin-top: 0.2rem;
-  }
-
-
-  
-  .price{
-    height: 50px;
-    padding: 0 1rem;
-    background: white;
-    color: #414141;
-    margin-top: 0.7rem;
-    font-size: 1.1rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-  }
-  
-  .add-btn {
-    width: 4rem;
-    padding:  10px;
-    border-radius: 5px;
-    background-color:  #3f51b5;
-    color: white;
-    border: none;
-    cursor: pointer;
-  }
-
-  .add-btn:hover {
-    opacity: 0.8;
-  }
-
 
   @media screen and (max-width: 1400px) {
-  
     .aside {
       width: 1100px;
       box-shadow: none;
@@ -157,10 +59,15 @@ ul{
   }
 
   @media screen and (max-width: 700px) {
-  
     .aside {
       flex-direction: column;
       align-items: center;
       gap: 0;
     }
+
+    .products-container {
+      width: 100%;
+   
+    }
+    
   }
