--- a/frontend/src/app/components/pages/home/home.component.html
+++ b/frontend/src/app/components/pages/home/home.component.html
@@ -11,51 +11,14 @@
     <app-tags (showCategory)="onShowCategory($event)" />
   </aside>
 
-  <ul>
+  <ul class="products-container">
     <li *ngFor="let product of products">
-      <div class="card">
-        <a routerLink="/product/{{ product.id }}">
-          <img [src]="product.imageUrl" alt="{{ product.name }}" />
-        </a>
-        <div class="content">
-          <a routerLink="/product/{{ product.id }}" class="name">
-            <span>
-              {{ product.name }}
-            </span>
-          </a>
-
-          <span
-            class="  material-icons favorite {{
-              user.id && favoriteProductsSet.has(product.id)
-                ? 'favorite'
-                : 'not'
-            }}"
-            (click)="toggleFavourite(product)"
-          >
-            favorite
-          </span>
-          <div class="stars">
-            <app-star-rating
-              [averageRating]="product.averageRating"
-              [productId]="product.id"
-            ></app-star-rating>
-          </div>
-          <div class="product-item-footer">
-            <div class="origins">
-              <span *ngFor="let origin of product.origins">
-                {{ origin }}
-              </span>
-            </div>
-          </div>
-        </div>
-
-        <div class="price">
-          <span>
-            {{ product.price | currency : "EUR" }}
-          </span>
-          <button class="add-btn" (click)="addToCart(product)">Buy</button>
-        </div>
-      </div>
+      <app-card
+        [product]="product"
+        [favoriteProductsSet]="favoriteProductsSet"
+        (favoriteToggled)="handleFavoriteToggled(product)"
+        [size]="CardSize.Medium"
+      ></app-card>
     </li>
   </ul>
 </div>
