--- a/frontend/src/app/components/pages/login-page/login-page.component.html
+++ b/frontend/src/app/components/pages/login-page/login-page.component.html
@@ -5,7 +5,7 @@
     <form [formGroup]="loginForm" (ngSubmit)="submit()">
       <app-text-input
         [control]="fc.email"
-        [showErrorsWhen]="isSubmitted || loginForm.touched"
+        [showErrorsWhen]="isSubmitted || fc.email.touched"
         type="email"
         placeholder="Email"
         icon="email"
@@ -21,10 +21,10 @@
         [showPassword]="showPassword"
         (iconClick)="togglePasswordVisibility('showPassword')"
         [control]="fc.password"
-        [showErrorsWhen]="isSubmitted || loginForm.touched"
+        [showErrorsWhen]="isSubmitted || fc.password.touched"
         [type]="showPassword ? 'text' : 'password'"
         placeholder="Password"
-        icon="password"
+        icon="lock"
         [border]="
           fc.password.touched && fc.password.invalid
             ? '2px solid rgb(245, 0, 87)'
