--- a/frontend/src/app/components/pages/register-page/register-page.component.css
+++ b/frontend/src/app/components/pages/register-page/register-page.component.css
@@ -8,24 +8,31 @@
 
   .details {
     width: 25rem;
-    height: 33rem;
-    padding: 1rem;
+    padding: 2rem;
     background-color: rgba(255, 255, 255, 0.747);
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); 
+    border: 0.5px solid whitesmoke;
     z-index: 1;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
 }
 
+form {
+  padding: 1rem 0;
+}
+
 
 .login{
-  margin-top: 1.2rem;
+  margin-top: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 14px;
 }
 
+
+app-button {
+  margin-top: 1rem;
+}
 
