--- a/frontend/src/app/components/partials/input-container/input-container.component.css
+++ b/frontend/src/app/components/partials/input-container/input-container.component.css
@@ -6,31 +6,58 @@
     border: 1px solid #e0e0e0;
     color: #ffffff00;
     display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
     align-items: center;
   }
 
   .container {
-    width: 100%;
-     position:relative;
-     display: flex;
-     align-items: center;
-    justify-content: space-between;
+    width: 90%;
+    position:relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  
+  .icon-container {
+    width: 2rem;
+    height: 2.7rem;
+    border-right: 3px solid #3f51b5;
+    display: flex;
+    align-items: center;
+  }
+
+  .icon {
+    width: 2rem;
+   
+  }
+
+  .not {
+    display: none;
+    width: 0rem;
   }
   
   label{
-    display: inline-block;
+    margin-left: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+    align-self: flex-start;
     font-size: 0.9rem;
-    color: #434343;
     color: #3f51b5;
     font-size: 1rem;
-    align-self: flex-start;
+   
   }
 
   .content{
     width: 90%;
-    padding: 0 0.5rem;
     height: 2.7rem;
+    margin-left: 0.5rem;
+    padding-left: 0.5rem;
     display: flex;
+    align-self: flex-start;
   }
 
 
