--- a/frontend/src/app/components/partials/text-input/text-input.component.css
+++ b/frontend/src/app/components/partials/text-input/text-input.component.css
@@ -1,6 +1,10 @@
+.input-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
 input {
     width: 100%;
-    height: 100%;
     border: none;
     border-bottom: 0 solid grey;
     transition: border-bottom 0.15s ease-out;
@@ -23,10 +27,6 @@ input {
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
-  top: 0;
-  right: 1rem;
-  height: 100%;
   width: 12rem;
   }
 
