--- a/frontend/src/app/components/partials/text-input/text-input.component.html
+++ b/frontend/src/app/components/partials/text-input/text-input.component.html
@@ -1,20 +1,21 @@
-<app-input-container
-  [label]="label"
-  [icon]="icon"
-  [border]="border"
-  [showPassword]="showPassword"
-  (iconClick)="iconClickTrigger()"
-  
->
-  <input
-    [type]="type"
-    [value]="value"
-    [placeholder]="placeholder"
-    [formControl]="formControl"
-  />
+<div class="input-wrapper">
+  <app-input-container
+    [label]="label"
+    [icon]="icon"
+    [border]="border"
+    [showPassword]="showPassword"
+    (iconClick)="iconClickTrigger()"
+  >
+    <input
+      [type]="type"
+      [value]="value"
+      [placeholder]="placeholder"
+      [formControl]="formControl"
+    />
+  </app-input-container>
 
   <app-input-validation
     [control]="control"
     [showErrorsWhen]="showErrorsWhen"
   ></app-input-validation>
-</app-input-container>
+</div>
